plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

ext {
    springCloudVersion = "2023.0.3"
    jacksonDatatypeVersion = "2.18.0"
    commonsLang3Version = '3.18.0'
    springdocOpenApiVersion = "2.6.0"
    junitJupiterVersion = "5.10.5"
    junitPlatformLauncherVersion = "1.11.2"
    okHttpVersion = "5.2.1"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    // thixvinix-commons: reusable Bean Validation constraints (CPF/CNPJ, ENUMs, date ranges,
    // base64/multipart files), published locally via `./gradlew -p libs/thixvinix-commons publishToMavenLocal`.
    implementation platform('io.github.thixvinix:commons-bom:0.1.0-SNAPSHOT')
    implementation 'io.github.thixvinix:commons-spring-boot-starter'
    implementation 'io.github.thixvinix:commons-documents-br'
    implementation 'io.github.thixvinix:commons-enums'
    implementation 'io.github.thixvinix:commons-dates'
    implementation 'io.github.thixvinix:commons-files'
    implementation 'io.github.thixvinix:commons-files-spring'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JUnit 5 API dependency
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"

    // Dependency for the JUnit 5 engine
    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"

    // Optional dependency for generating reports
    testImplementation "org.junit.platform:junit-platform-launcher:$junitPlatformLauncherVersion"

    // MockWebServer for HTTP client testing
    testImplementation "com.squareup.okhttp3:mockwebserver:$okHttpVersion"
    testImplementation "com.squareup.okhttp3:okhttp:$okHttpVersion"

    // Support for Java 8 DateTime API in Jackson (LocalDate, LocalDateTime)
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonDatatypeVersion"

    // Additional utilities for manipulating strings, numbers, objects, etc.
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation "org.apache.commons:commons-lang3:$commonsLang3Version"

    // Swagger OpenAPI v3
    // Swagger UI for visualization and testing
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$springdocOpenApiVersion"
}

test {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

